gnpt-update-project-architecture